--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: ItemShuffle
 main: fr.lanfix.itemshuffle.Main
-version: 1.0-SNAPSHOT-13
+version: 1.0
 author: Lanfix
 api-version: 1.19
 commands:
